Add secondary nav link highlighting

--- a/components/layouts/default.html
+++ b/components/layouts/default.html
@@ -31,7 +31,7 @@
 				<li><a href="index.html#getStarted">Get Started</a></li>
 				<li><a href="%tutorial.html">Tutorial</a></li>
 				<li><a href="https://github.com/joshboyan/minframe" target="_blank">Github</a></li>
-				<li><a href="https://www.npmjs.com/~joshboyan">npm</a></li>
+				<li><a href="https://www.npmjs.com/~joshboyan" target="_blank">npm</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 			</div>
@@ -40,7 +40,7 @@
 				<li><a onClick="slideOut()" href="index.html#getStarted">Get Started</a></li>
 				<li><a href="%tutorial.html">Tutorial</a></li>
 				<li><a href="https://github.com/joshboyan/minframe" target="_blank">Github</a></li>
-				<li><a href="https://www.npmjs.com/~joshboyan">npm</a></li>
+				<li><a href="https://www.npmjs.com/~joshboyan" target="_blank">npm</a></li>
 				<li><a onClick="slideOut()" href="#contact">Contact</a></li>
 			</ul>
 		</nav>
@@ -82,6 +82,7 @@
 			<a href="#main"><i aria-label="Back to Top" class="fa fa-angle-double-up"></i></a>
 		</section><!--/#copy-->
 	</footer>
+	<script   src="http://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>
 	<script src="%js/scripts.js"></script>
 </body>
 </html>
