--- a/components/sass/styles.scss
+++ b/components/sass/styles.scss
@@ -8,7 +8,6 @@ html {
     line-height: 1.5;
     body {
         width: 100%;
-
         h1,
         h2,
         h3,
@@ -21,6 +20,49 @@ html {
         }
         a {
             color: $color2;
+            display: inline-block;
+            vertical-align: middle;
+            -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+            box-shadow: inset 0 0 1px rgba(0, 0, 0, 0);
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+            -moz-osx-font-smoothing: grayscale;
+            position: relative;
+            overflow: hidden;
+        }
+        a:before {
+            content: "";
+            position: absolute;
+            z-index: -1;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: $color1;
+            height: 3px;
+            -webkit-transition: right 0.3s ease-out;
+            transition: right 0.3s ease-out;
+        }
+        a:after {
+            content: "";
+            position: absolute;
+            z-index: -1;
+            left: 0;
+            right: 100%;
+            bottom: 0;
+            background: $color5;
+            height: 3px;
+            -webkit-transition: right 0.3s ease-out;
+            transition: right 0.3s ease-out;
+        }
+        a:hover {
+            color: $color5;
+            transition: color 0s ease-out 0.22s;
+        }
+        a:hover:after,
+        a:focus:after,
+        a:active:after {
+            right: 0;
         }
         p {
             width: 90%;
@@ -43,8 +85,12 @@ html {
                     top: 0;
                     color: $color1;
                     background-color: $color2;
+                    a:before,
+                    a:after {
+                        display: none;
+                    }
                     img {
-                    	padding-top: .75rem;
+                        padding-top: .75rem;
                     }
                     ul {
                         display: none;
@@ -57,6 +103,14 @@ html {
                             a {
                                 text-decoration: none;
                                 color: $color1;
+                                &:before,
+                                &:after {
+                                    display: inline;
+                                }
+                            }
+                            a:hover {
+                                color: $color5;
+                                transition: color 0s ease-out 0.22s;
                             }
                         }
                     }
@@ -89,6 +143,10 @@ html {
                             text-decoration: none;
                             color: $color1;
                         }
+                        a:hover {
+                            color: $color5;
+                            transition: color 0s ease-out 0.22s;
+                        }
                     }
                 }
             }
@@ -96,7 +154,12 @@ html {
         main {
             overflow: hidden;
             margin-top: 3.375rem;
-            
+            a {
+                text-decoration: none;
+            }
+            a:before {
+                background: $color2;
+            }
             #automatedTools {
                 span {
                     text-decoration: underline;
@@ -113,10 +176,8 @@ html {
                     border: 1px solid $color2;
                     margin-bottom: 1rem;
                 }
-                
             }
             #theGrid {
-            
                 p:nth-of-type(2) {
                     position: relative;
                     width: 10%;
@@ -190,119 +251,139 @@ html {
                 }
             }
         }
-            //tutorial.html styles
-            aside {
+        //tutorial.html styles
+        aside {
+            display: none;
+        }
+        .tutorialMain {
+            a {
+                text-decoration: none;
+            }
+            a:before {
+                background: $color2;
+            }
+        }
+        #getStartedTutorial {
+            li {
+                padding-bottom: 1rem;
+            }
+            hr {
+                width: 80%;
+                margin: 2.25rem auto;
+            }
+            p:last-of-type {
+                margin-bottom: 2.25rem;
+            }
+            img {
+                width: 90%;
+                margin: 0 5% 1.5rem 5%;
+            }
+        }
+        .col6:nth-of-type(4) {
+            margin-top: -5.063rem;
+        }
+    }
+    #fileStructure {
+        img {
+            width: 100%;
+        }
+    }
+    #tutorialGrid {
+        li {
+            list-style-type: none;
+        }
+        .col1,
+        .col2,
+        .col3,
+        .col4,
+        .col5,
+        .col6,
+        .col7,
+        .col8,
+        .col9,
+        .col10,
+        .col11,
+        .col12 {
+            background-color: blue;
+            p {
+                text-align: center;
+                padding: 1rem 0;
+            }
+        }
+    }
+    #wrapUp {}
+    footer {
+        position: relative;
+        overflow: hidden;
+        color: $color1;
+        background-color: $color2;
+        padding-top: 2.25rem;
+        z-index: 400;
+        img {
+            width: 80%;
+            margin: 1.5rem 10%;
+        }
+        li {
+            list-style-type: none;
+            display: inline;
+            font-size: 2.25rem;
+            padding: 0 10%;
+            &:first-of-type {
+                padding-left: 5%;
+            }
+        }
+        .col2 {
+            a:after,
+            a:before {
                 display: none;
             }
-            #getStartedTutorial {
-                li {
-                    padding-bottom: 1rem;
-                }
-                hr {
-                    width: 80%;
-                    margin: 2.25rem auto;
-                }
-                p:last-of-type {
-                    margin-bottom: 2.25rem;
-                }
-                img {
-                    width: 90%;
-                    margin: 0 5% 1.5rem 5%;
-                }
-                .col6:nth-of-type(4) {
-                    margin-top: -5.063rem;
-                }
-            }
-            #fileStructure {
-                img {
-                    width: 100%;
-                }
-            }
-            #tutorialGrid {
-                li {
-                    list-style-type:none;
-                }
-                .col1,
-                .col2,
-                .col3,
-                .col4,
-                .col5,
-                .col6,
-                .col7,
-                .col8,
-                .col9,
-                .col10,
-                .col11,
-                .col12 {
-                    background-color: blue;
-                    p {
-                        text-align: center;
-                        padding: 1rem 0;
-                    }
-                }
-                 
-            }
-            #wrapUp {
-
-            }
-        
-        footer {
-            position: relative;
-            overflow: hidden;
-            color: $color1;
-            background-color: $color2;
-            padding-top: 2.25rem;
-            z-index: 400;
-            img {
+        }
+        form {
+            input,
+            label,
+            select,
+            textarea {
                 width: 80%;
-                margin: 1.5rem 10%;
+                margin: 0 10%;
             }
-            li {
-                list-style-type: none;
-                display: inline;
-                font-size: 2.25rem;
-                padding: 0 10%;
-                &:first-of-type {
-                    padding-left: 5%;
-                }
+            label {
+                font-size: .75rem;
             }
-            form {
-                input,
-                label,
-                select,
-                textarea {
-                    width: 80%;
-                    margin: 0 10%;
-                }
-                label {
-                    font-size: .75rem;
-                }
-                input,
-                select {
-                    margin-bottom: .50rem;
-                }
-                select {
-                    background-color: $color4;
-                }
-                option {
-                    margin-top: -100px;
-                }
+            input,
+            select {
+                margin-bottom: .50rem;
             }
-            #copy {
-                span {
-                    margin-left: 10%;
-                }
-                a i {
+            select {
+                background-color: $color4;
+            }
+            option {
+                margin-top: -100px;
+            }
+        }
+        #copy {
+            span {
+                margin-left: 10%;
+            }
+            a {
+                float: right;
+                width: 20%;
+                margin-right: 10%;
+                i {
                     margin: 1rem 0 0 10%;
                     font-size: 3.375rem;
                 }
             }
-            .tabletFormPosition {
+            a:after,
+            a:before {
                 display: none;
             }
-            a {
-                color: $color1;
-            }
+        }
+        .tabletFormPosition {
+            display: none;
+        }
+        a {
+            color: $color1;
+            text-decoration: none;
         }
     }
 }
@@ -325,21 +406,21 @@ html {
                 }
             }
             footer {
-            	img {
-            		width: 100%;
-            	}
-            	li {
-            		display: block;
-            		&:first-of-type {
-            			padding-left: 10%;
-            		}
-            		&:last-of-type {
-            			padding-left: 5%;
-            		}
-            	}
-            	#copy a i {
-            		margin-left: 50%
-            	}
+                img {
+                    width: 100%;
+                }
+                li {
+                    display: block;
+                    &:first-of-type {
+                        padding-left: 10%;
+                    }
+                    &:last-of-type {
+                        padding-left: 5%;
+                    }
+                }
+                #copy a i {
+                    margin-left: 50%
+                }
             }
         }
     }
@@ -351,7 +432,7 @@ html {
         font-size: 20px;
         body {
             section {
-                margin-bottom: 2.5rem; 
+                margin-bottom: 2.5rem;
             }
             p {
                 width: 80%;
@@ -360,9 +441,9 @@ html {
                 nav {
                     .navbar {
                         ul {
-                        	width: 70%;
+                            width: 70%;
                             li {
-                            	font-size: 1.5rem;
+                                font-size: 1.5rem;
                             }
                         }
                     }
@@ -370,46 +451,68 @@ html {
             }
             //tutorial.html styles
             aside {
-                    display: block;
-                    position: fixed;
-                    float: left;
-                    margin-top: 4rem;
-                    width: 15%;
-                    font-size: 16px;
-                    font-weight: bold;
-                    li {
-                        list-style-type: none;
-                        padding-left: 2.5%;
+                display: block;
+                position: fixed;
+                float: left;
+                margin-top: 3.5rem;
+                width: 15%;
+                font-size: 16px;
+                font-weight: bold;
+                li {
+                    list-style-type: none;
+                    padding-left: 10%;
+                    
+                    .active {
+                        color: $color5;
+                        &:after {
+                            right: 0;
+                        }
                     }
-                }
-            .tutorialMain {
-                float: right;
-                width: 85%;
-                margin-top: 4rem;   
-            }
-            #getStartedTutorial {
-                    li {
-                        width: 70%;
-                        margin: 0 15%;
-                    }
-                }
-            main {
-                
 
-                
+                    
+                }
+                li:nth-of-type(1),
+                li:nth-of-type(2),
+                li:nth-of-type(6),
+                li:nth-of-type(7),
+                li:nth-of-type(22) {
+                    padding-left: 0;
+                }
+                li:nth-of-type(18),
+                li:nth-of-type(19),
+                li:nth-of-type(20),
+                li:nth-of-type(21) {
+                    padding-left: 20%;
+                }
             }
-            footer {
-            	li {
-            		&:last-of-type {
-            			padding-left: 7.5%;
-            		}
-            	}
+            a {
+                text-decoration: none;
+            }
+            a:before {
+                background: $color2;
+            }
+        }
+        .tutorialMain {
+            float: right;
+            width: 85%;
+            margin-top: 4rem;
+        }
+        #getStartedTutorial {
+            li {
+                width: 70%;
+                margin: 0 15%;
+            }
+        }
+        main {}
+        footer {
+            li {
+                &:last-of-type {
+                    padding-left: 7.5%;
+                }
             }
         }
     }
 }
 
 //large screen styles
-@media only screen and (min-width: 1140px) {
-
-}
+@media only screen and (min-width: 1140px) {}
