--- a/components/sass/styles.scss
+++ b/components/sass/styles.scss
@@ -1,521 +1,79 @@
+/* All other Sass style sheets are imported here. You can add as many
+as makes sense for your project as long as you follow the 
+naming convention "_filename.scss". They will be concantenated, compiled 
+to CSS3 and linted for the dev build and minified with comments removed 
+for the dist build */
+
 @import "normalize";
 @import "grid";
 @import "variables";
 @import "mixins";
+
 //mobile styles
-html {
-    font-size: 18px;
-    line-height: 1.5;
-    body {
-        width: 100%;
-        h1,
-        h2,
-        h3,
-        h4 {
-            margin: 3.375 auto 0 auto;
-            text-align: center;
-        }
-        h1 strong {
-            font-size: 2.75rem;
-        }
-        a {
-            color: $color2;
-            display: inline-block;
-            vertical-align: middle;
-            -webkit-transform: translateZ(0);
-            transform: translateZ(0);
-            box-shadow: inset 0 0 1px rgba(0, 0, 0, 0);
-            -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
-            -moz-osx-font-smoothing: grayscale;
-            position: relative;
-            overflow: hidden;
-        }
-        a:before {
-            content: "";
-            position: absolute;
-            z-index: -1;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: $color1;
-            height: 3px;
-            -webkit-transition: right 0.3s ease-out;
-            transition: right 0.3s ease-out;
-        }
-        a:after {
-            content: "";
-            position: absolute;
-            z-index: -1;
-            left: 0;
-            right: 100%;
-            bottom: 0;
-            background: $color5;
-            height: 3px;
-            -webkit-transition: right 0.3s ease-out;
-            transition: right 0.3s ease-out;
-        }
-        a:hover {
-            color: $color5;
-            transition: color 0s ease-out 0.22s;
-        }
-        a:hover:after,
-        a:focus:after,
-        a:active:after {
-            right: 0;
-        }
-        p {
-            width: 90%;
-            text-align: justify;
-            margin: 0 auto 1.5rem auto;
-        }
-        code {
-            font: .75rem/1.5 monospace;
-            background-color: $color4;
-            border: 2px solid $color3;
-            border-radius: 4px;
-        }
-        header {
-            overflow: hidden;
-            nav {
-                .navbar {
-                    position: fixed;
-                    z-index: 500;
-                    width: 100%;
-                    top: 0;
-                    color: $color1;
-                    background-color: $color2;
-                    a:before,
-                    a:after {
-                        display: none;
-                    }
-                    img {
-                        padding-top: .75rem;
-                    }
-                    ul {
-                        display: none;
-                        float: right;
-                        width: 75%;
-                        li {
-                            display: inline;
-                            font-size: 1.25rem;
-                            padding: 0 1%;
-                            a {
-                                text-decoration: none;
-                                color: $color1;
-                                &:before,
-                                &:after {
-                                    display: inline;
-                                }
-                            }
-                            a:hover {
-                                color: $color5;
-                                transition: color 0s ease-out 0.22s;
-                            }
-                        }
-                    }
-                }
-                .fa-bars {
-                    color: $color1;
-                    float: right;
-                    font-size: 2.25rem;
-                    padding: 1rem;
-                }
-                #mobileMenu {
-                    position: fixed;
-                    z-index: 1000;
-                    list-style-type: none;
-                    background-color: $color2;
-                    width: 100%;
-                    height: 120vh;
-                    right: -120vw;
-                    top: -10vh;
-                    transition: 1s;
-                    li {
-                        color: $color1;
-                        font-size: 2.25rem;
-                        margin-left: 10vw;
-                        i {
-                            padding-top: 3.375rem;
-                            margin-left: 75vw;
-                        }
-                        a {
-                            text-decoration: none;
-                            color: $color1;
-                        }
-                        a:hover {
-                            color: $color5;
-                            transition: color 0s ease-out 0.22s;
-                        }
-                    }
-                }
-            }
-        }
-        main {
-            overflow: hidden;
-            margin-top: 3.375rem;
-            a {
-                text-decoration: none;
-            }
-            a:before {
-                background: $color2;
-            }
-            #automatedTools {
-                span {
-                    text-decoration: underline;
-                }
-                i {
-                    width: 100%;
-                    text-align: center;
-                    margin-top: 1.5rem;
-                    margin-bottom: .75rem;
-                    font-size: 2.25rem;
-                }
-                hr {
-                    width: 30%;
-                    border: 1px solid $color2;
-                    margin-bottom: 1rem;
-                }
-            }
-            #theGrid {
-                p:nth-of-type(2) {
-                    position: relative;
-                    width: 10%;
-                    text-align: left;
-                    background-color: $color1;
-                    padding: 1rem;
-                    margin: 0 80% -3.75rem 10%;
-                }
-                .section {
-                    margin-top: 2.25rem;
-                    padding-top: 1.5rem;
-                    border: 1px solid $color5;
-                }
-                .col1,
-                .col2,
-                .col3,
-                .col4,
-                .col5,
-                .col6,
-                .col7,
-                .col8,
-                .col9,
-                .col10,
-                .col11,
-                .col12 {
-                    background-color: blue;
-                    p {
-                        text-align: center;
-                        padding: 1rem 0;
-                    }
-                }
-            }
-            #templating {
-                em {
-                    text-decoration: underline;
-                }
-                h4 {
-                    margin-top: .75rem;
-                }
-                p {
-                    margin-bottom: 1.5rem;
-                }
-                .col6 div {
-                    width: 90%;
-                    margin: 0 2.5%;
-                    padding: 2.5%;
-                }
-                .col6:nth-of-type(1) div {
-                    margin-top: 3rem;
-                }
-                strong {
-                    color: red;
-                }
-            }
-            #getStarted {
-                li {
-                    padding-bottom: 1rem;
-                }
-                hr {
-                    width: 80%;
-                    margin: 2.25rem auto;
-                }
-                p:last-of-type {
-                    margin-bottom: 2.25rem;
-                }
-                img {
-                    width: 95%;
-                }
-            }
-        }
-        //tutorial.html styles
-        aside {
-            display: none;
-        }
-        .tutorialMain {
-            a {
-                text-decoration: none;
-            }
-            a:before {
-                background: $color2;
-            }
-        }
-        #getStartedTutorial {
-            li {
-                padding-bottom: 1rem;
-            }
-            hr {
-                width: 80%;
-                margin: 2.25rem auto;
-            }
-            p:last-of-type {
-                margin-bottom: 2.25rem;
-            }
-            img {
-                width: 90%;
-                margin: 0 5% 1.5rem 5%;
-            }
-            .col6:nth-of-type(4) {
-                margin-top: -5.063rem;
-            }
-        }
+
+html {}
+
+body {
+
+    header{
+
+        nav {}
     }
-    #fileStructure {
-        img {
-            width: 100%;
-        }
-    }
-    #tutorialGrid {
-        li {
-            list-style-type: none;
-        }
-        .col1,
-        .col2,
-        .col3,
-        .col4,
-        .col5,
-        .col6,
-        .col7,
-        .col8,
-        .col9,
-        .col10,
-        .col11,
-        .col12 {
-            background-color: blue;
-            p {
-                text-align: center;
-                padding: 1rem 0;
-            }
-        }
-    }
-    #wrapUp {}
-    footer {
-        position: relative;
-        overflow: hidden;
-        color: $color1;
-        background-color: $color2;
-        padding-top: 2.25rem;
-        z-index: 400;
-        img {
-            width: 80%;
-            margin: 1.5rem 10%;
-        }
-        li {
-            list-style-type: none;
-            display: inline;
-            font-size: 2.25rem;
-            padding: 0 10%;
-            &:first-of-type {
-                padding-left: 5%;
-            }
-        }
-        .col2 {
-            a:after,
-            a:before {
-                display: none;
-            }
-        }
-        form {
-            input,
-            label,
-            select,
-            textarea {
-                width: 80%;
-                margin: 0 10%;
-            }
-            label {
-                font-size: .75rem;
-            }
-            input,
-            select {
-                margin-bottom: .50rem;
-            }
-            select {
-                background-color: $color4;
-            }
-            option {
-                margin-top: -100px;
-            }
-        }
-        #copy {
-            span {
-                margin-left: 10%;
-            }
-            a {
-                float: right;
-                width: 20%;
-                margin-right: 10%;
-                i {
-                    margin: 1rem 0 0 10%;
-                    font-size: 3.375rem;
-                }
-            }
-            a:after,
-            a:before {
-                display: none;
-            }
-        }
-        .tabletFormPosition {
-            display: none;
-        }
-        a {
-            color: $color1;
-            text-decoration: none;
-        }
-    }
+
+    main {}
+
+    footer {}
 }
 
 //tablet styles
 @media only screen and (min-width: 768px) {
-    html {
-        body {
-            header {
-                nav {
-                    .fa-bars {
-                        display: none;
-                    }
-                    .navbar {
-                        ul {
-                            display: inline;
-                            width: 60%;
-                        }
-                    }
-                }
-            }
-            
-                ol {
-                    width: 60%;
-                    margin: 0 20%;
-                    li {
-                        margin-bottom: 1rem;
-                    }
-                }
-            
-            footer {
-                img {
-                    width: 100%;
-                }
-                li {
-                    display: block;
-                    &:first-of-type {
-                        padding-left: 10%;
-                    }
-                    &:last-of-type {
-                        padding-left: 5%;
-                    }
-                }
-                #copy a i {
-                    margin-left: 50%
-                }
-            }
-        }
+
+html {}
+
+body {
+
+    header{
+
+        nav {}
     }
-}
+
+    main {}
+    
+    footer {}
+}    
+}   
 
 //notebook styles
 @media only screen and (min-width: 960px) {
-    html {
-        font-size: 20px;
-        body {
-            section {
-                margin-bottom: 2.5rem;
-            }
-            p {
-                width: 80%;
-            }
-            header {
-                nav {
-                    .navbar {
-                        ul {
-                            width: 70%;
-                            li {
-                                font-size: 1.5rem;
-                            }
-                        }
-                    }
-                }
-            }
-            //tutorial.html styles
-            aside {
-                display: block;
-                position: fixed;
-                float: left;
-                margin-top: 3.5rem;
-                width: 15%;
-                font-size: 16px;
-                font-weight: bold;
-                li {
-                    list-style-type: none;
-                    padding-left: 10%;
-                    .active {
-                        color: $color5;
-                        &:after {
-                            right: 0;
-                        }
-                    }
-                }
-                li:nth-of-type(1),
-                li:nth-of-type(2),
-                li:nth-of-type(6),
-                li:nth-of-type(7),
-                li:nth-of-type(22) {
-                    padding-left: 0;
-                }
-                li:nth-of-type(18),
-                li:nth-of-type(19),
-                li:nth-of-type(20),
-                li:nth-of-type(21) {
-                    padding-left: 20%;
-                }
-            }
-            a {
-                text-decoration: none;
-            }
-            a:before {
-                background: $color2;
-            }
-        }
-        .tutorialMain {
-            float: right;
-            width: 85%;
-            margin-top: 4rem;
-        }
-        #getStartedTutorial {
-            li {
-                width: 70%;
-                margin: 0 15%;
-            }
-        }
-        main {}
-        footer {
-            li {
-                &:last-of-type {
-                    padding-left: 7.5%;
-                }
-            }
-        }
-    }
-}
 
+html {}
+
+body {
+
+    header{
+
+        nav {}
+    }
+
+    main {}
+    
+    footer {}
+}
+}    
 //large screen styles
 @media only screen and (min-width: 1140px) {}
+
+html {}
+
+body {
+
+    header{
+
+        nav {}
+    }
+
+    main {}
+    
+    footer {}
+}
+}
