--- a/components/layouts/default.html
+++ b/components/layouts/default.html
@@ -16,6 +16,7 @@
 	<!--all file paths need to start with % to compile correctly inot different builds. For example: %img/, %css/, %js/-->
 	<link rel="icon" type="image/png" href="%img/favicon.png">
 	<link rel="icon" type="image/ico" href="%img/logo.ico">
+	<link type="text/plain" rel="author" href="%humans.txt" />
 	<link href="%css/styles.css" rel="stylesheet">
 	<!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
