Change front matter to include quotes

--- a/components/layouts/default.html
+++ b/components/layouts/default.html
@@ -6,12 +6,12 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--Double curly braces load data from the top of pages -->
-	<meta description="{{description}}">
-	<meta property="og:title" content="{{title}}" />
+	<meta description={{description}}>
+	<meta property="og:title" content={{title}} />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="{{url}}" />
-	<meta property="og:image" content="{{image}}" />
-	<meta property="og:description" content="{{description}}" />
+	<meta property="og:url" content={{url}} />
+	<meta property="og:image" content={{image}} />
+	<meta property="og:description" content={{description}} />
 	<title>{{title}}</title>
 	<!--all file paths need to start with % to compile correctly inot different builds. For example: %img/, %css/, %js/-->
 	<link rel="icon" type="image/png" href="%img/favicon.png">
