--- a/components/sass/styles.scss
+++ b/components/sass/styles.scss
@@ -61,7 +61,7 @@ body {
 }
 }    
 //large screen styles
-@media only screen and (min-width: 1140px) {}
+@media only screen and (min-width: 1140px) {
 
 html {}
 
