Add ARIA landmark roles

--- a/components/layouts/default.html
+++ b/components/layouts/default.html
@@ -23,16 +23,16 @@
   <![endif]-->
 </head>
 <body>
-	<header>
+	<header role="banner">
 		<a href="#main" class="sr-only">Skip to content</a>
-		<nav>
+		<nav role="navigation">
 			
 		</nav>
 	<!--header closes on each page for unique hero images etc-->
 	<!--body tag injects unique pages from pages directory-->
 {{> body}}
 
-	<footer>
+	<footer role="contentinfo">
 		
 	</footer>
 	<script src="%js/scripts.js"></script>
