--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,8 +5,11 @@ html {
   font-size: 12px;
 }
 main {
+  width: 105%;
+  width: 100vw;
   max-width: 100%;
   max-width: 100vw;
+  margin: -2.5% 0 -2.5% -.25%;
   overflow: hidden;
   background: #87ceeb;
 }
