--- a/components/layouts/default.html
+++ b/components/layouts/default.html
@@ -13,10 +13,34 @@
 	<meta property="og:image" content={{image}} />
 	<meta property="og:description" content={{description}} />
 	<title>{{title}}</title>
-	<!--all file paths need to start with % to compile correctly inot different builds. For example: %img/, %css/, %js/-->
+	<!-- Favicons -->
 	<link rel="icon" type="image/png" href="img/favicon.png">
 	<link rel="icon" type="image/ico" href="img/logo.ico">
+	<!-- Project Information -->
 	<link type="text/plain" rel="author" href="humans.txt" />
+	<!-- Disable tap highlight on IE -->
+    <meta name="msapplication-tap-highlight" content="no">
+
+    <!-- Web Application Manifest -->
+    <link rel="manifest" href="manifest.json">
+
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="SVG Weather">
+    <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
+
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="SVG Weather">
+    <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
+
+    <!-- Tile icon for Win8 (144x144 + tile color) -->
+    <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
+    <meta name="msapplication-TileColor" content="#2F3BA2">
+
+    <!-- Color the status bar on mobile devices -->
+    <meta name="theme-color" content="#000000">
 	<link href="css/styles.css" rel="stylesheet">
 	<!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -32,9 +56,18 @@
 	<!--body tag injects unique pages from pages directory-->
 {{> body}}
 
-	<footer role="contentinfo">
+	
 		
 	</footer>
 	<script src="js/scripts.js"></script>
+	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-XXXXX-X', 'auto');
+      ga('send', 'pageview');
+    </script>
 </body>
 </html>
