--- a/builds/dev/layouts/default.html
+++ b/builds/dev/layouts/default.html
@@ -13,35 +13,11 @@
 	<meta property="og:image" content= />
 	<meta property="og:description" content= />
 	<title></title>
-	<!-- Favicons -->
+	<!--all file paths need to start with % to compile correctly inot different builds. For example: %./builds/dev/img/, %./builds/dev/css//, %./builds/dev/js/-->
 	<link rel="icon" type="image/png" href="./builds/dev/img/favicon.png">
 	<link rel="icon" type="image/ico" href="./builds/dev/img/logo.ico">
-	<!-- Project Information -->
 	<link type="text/plain" rel="author" href="humans.txt" />
-	<!-- Disable tap highlight on IE -->
-    <meta name="msapplication-tap-highlight" content="no">
-
-    <!-- Web Application Manifest -->
-    <link rel="manifest" href="manifest.json">
-
-    <!-- Add to homescreen for Chrome on Android -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="SVG Weather">
-    <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
-
-    <!-- Add to homescreen for Safari on iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="SVG Weather">
-    <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
-
-    <!-- Tile icon for Win8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
-    <meta name="msapplication-TileColor" content="#2F3BA2">
-
-    <!-- Color the status bar on mobile devices -->
-    <meta name="theme-color" content="#000000">
-	<link href="./builds/dev/css/styles.css" rel="stylesheet">
+	<link href="./builds/dev/css//styles../builds/dev/css/" rel="stylesheet">
 	<!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
@@ -55,12 +31,8 @@
 	<!--header closes on each page for unique hero images etc-->
 	<!--body tag injects unique pages from pages directory-->
 Panini: template could not be parsed <br> 
- <pre>RangeError: Maximum call stack size exceeded</pre>
-	
-		
+ <pre>RangeError: Maximum call stack size exceeded</pre>		
 	</footer>
 	<script src="./builds/dev/js/scripts.js"></script>
-	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    
 </body>
 </html>
