--- a/components/pages/index.html
+++ b/components/pages/index.html
@@ -17,7 +17,7 @@ description: ""
             <div class="cloud2"></div>
             <div class="cloud3"></div>
         </div>
-    </div>
+    </div><!--/#clouds-->
     <div id="rain">
         <div class="precipitation">
             <div class="drop">
@@ -56,7 +56,7 @@ description: ""
                     <path d="M 10 35 q 15 30 30 0" fill="#7373e0" />
                 </svg>
             </div>
-        </div>
+        </div><!-- /.precipitation -->
         <div class="heavy">
             <div class="drop">
                 <svg height="55" width="40">
@@ -95,7 +95,7 @@ description: ""
                 </svg>
             </div>
         </div>
-    </div>
+    </div><!-- /.heavy -->
     <div id="snow">
         <div class="precipitation">
             <div class="drop">
@@ -128,7 +128,7 @@ description: ""
                     <circle cx="20" cy="20" r="20" fill="#ffffff" />
                 </svg>
             </div>
-        </div>
+        </div><!-- /.precipitation -->
         <div class="heavy">
             <div class="drop">
                 <svg height="40" width="40">
@@ -160,8 +160,8 @@ description: ""
                     <circle cx="20" cy="20" r="20" fill="#ffffff" />
                 </svg>
             </div>
-        </div>
-    </div>
+        </div><!-- /.heavy -->
+    </div><!-- /#snow -->
     <div id="sun">
         <div class="sun-core">
             <svg height="200" width="200">
@@ -192,7 +192,7 @@ description: ""
                 <polygon points="100,10 40,198 190,78 10,78 160,198" fill="#ff4500" />
             </svg>
         </div>
-    </div>
+    </div><!-- /#sun -->
     <div id="stars">
         <div class="star">
             <svg height="25" width="30">
@@ -359,7 +359,7 @@ description: ""
                 <polygon points="10,1 4,20 19,8 1,8 16,20" fill="#ffca8a" />
             </svg>
         </div>
-    </div>
+    </div><!-- /#stars -->
     <div id="moon">
         <svg class="moon" height="200" width="200">
             <path d="M100 140 A30 30 0 1 0 120 80 40 40 0 1 1 100 140z" fill="#ffca8a" />
@@ -399,14 +399,14 @@ description: ""
                 </svg>
             </div>
         </div>
-    </div>
+    </div><!-- /#moon -->
     <div id="lightning">
         <div class="lightning">
             <svg width="100px" height="200px">
                 <polygon stroke="gray" fill="yellow" points="100,0 67,50 90,45 47,100 70,95 0,150 27,110 12,113 50,70 30,73 100,0" />
             </svg>
         </div>
-    </div>
+    </div><!-- /#lightning -->
     <div class="info-panel column">
         <div class="row">
             <h1 id="location">location</h1>
@@ -500,7 +500,7 @@ description: ""
             <div id="day3Wind">Wind</div>
             <div id="day3Humidity">Humidity</div>
         </div>
-    </div>
+    </div><!-- /.info-panel -->
     <div class="option-panel">
         <div class="row">
             <h5>View Animations</h5></div>
@@ -530,5 +530,5 @@ description: ""
             <a href="http://joshboyan.com" target="_blank"> <img src="https://joshboyan.com/img/logo.png" alt="" /></a>
             <a href="http://joshboyan.com" target="_blank" id="copy"></a>
         </div>
-    </div>
+    </div><!-- /.option-panel -->
 </main>
