Add homescreen icons

--- a/components/pages/index.html
+++ b/components/pages/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default 
-title: "" 
-url: "" 
-image: "" 
-description: "" 
+title: "Animated Weather App" 
+url: "https://joshboyan.com/weather-app" 
+image: "img/logo.png" 
+description: "Animated Weather Progressive Web App" 
 ---
 <main id="main">
     <div id="clouds">
