Update service worker

--- a/components/pages/index.html
+++ b/components/pages/index.html
@@ -6,6 +6,7 @@ image: "img/logo.png"
 description: "Animated Weather Progressive Web App" 
 ---
 <main id="main">
+    <!-- Background animations -->
     <div id="clouds">
         <div class="left-clouds">
             <div class="cloud1"></div>
@@ -407,6 +408,7 @@ description: "Animated Weather Progressive Web App"
             </svg>
         </div>
     </div><!-- /#lightning -->
+    <!-- Panel that displays waether info -->
     <div class="info-panel column">
         <div class="row">
             <h1 id="location">location</h1>
