--- a/components/layouts/default.html
+++ b/components/layouts/default.html
@@ -48,7 +48,7 @@
 	<!--header closes on each page for unique hero images etc-->
 	<!--body tag injects unique pages from pages directory-->
 {{> body}}
-		
+	<script src="sw.js"></script>
 	<script src="js/scripts.js"></script>
 </body>
 </html>
