Adjust gulpfile and service worker

--- a/components/pages/index.html
+++ b/components/pages/index.html
@@ -412,7 +412,9 @@ description: "Animated Weather Progressive Web App"
     <div class="info-panel column">
         <div class="row">
             <h1 id="location">location</h1>
-            <!--<p id="target"></p>-->
+        </div>
+        <div class="row">
+            <p id="dateTime"></p>
         </div>
         <hr />
         <div class="row">
